fix: buttons gaps

--- a/components/BackHeader/styles.module.css
+++ b/components/BackHeader/styles.module.css
@@ -26,7 +26,7 @@
 }
 
 .container h1 {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 .container h3 {
